@@ -1,0 +1,11 @@
+<?php
+/** Mandailing (Batak Mandailing)
+ *
+ * To improve a translation please visit https://translatewiki.net
+ *
+ * @ingroup Language
+ * @file
+ *
+ */
+
+$fallback = 'id';
